--- a/projeto 5/index.html
+++ b/projeto 5/index.html
@@ -27,7 +27,7 @@
         <tbody id="corpoTabela">
         </tbody>
     </table>
-    <script src="./main.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
